<resources>
    <string name="app_name">MyIHEC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="covid">AVIS</string>
    <string name="covid_desc">تم مساء يوم الاثنين تعقيم قاعات الامتحان بالمعهد،  نتوجه بالشكر لأبناء الهلال الأحمر  السادة :
محمد هادي مليكة،امير حسين،شهاب المهيري،محمد غيث قنطاوي،آدم مبارك،انيس جديدي.
الشكر موصول أيضا لشركة neodeme و إلى السيد انيس الجديدي على العمل التطوعي  </string>
    <string name="rappel">Rappel aux étudiants</string>
    <string name="rappel_desc">Les examens de la 2LFG, 2LAM et 2LGQ auront lieu Samedi 13 Juin 2020 du 09h00 a 11h00</string>
    <string name="avis">AVIS
    Master professionnel DRC
    Premiére année</string>
    <string name="avis_desc">Il est porté a la connaissance des étudiants en premiére année master professionel Distribution et Relation que le module "Merchandising et concept magasin" prévu le 23/06/2020 a été annulé </string>
    <string name="stage">Stage facultatifs</string>
    <string name="stage_desc">http://www.ihecso.rnu.tn/fra/articles/1246/avis-aux-etudiants-concernes-par-les-stages-facultatifs </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_signin" translatable="false">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>


    <string name="ihecso_title">High School of Commercial Studies</string>
    <string name="changeLanguage_title">Change Language</string>

    <string name="main_title" translatable="false">"Accueil"</string>
    <string name="login_title" translatable="false">"Connection"</string>
    <string name="sendmsg_title" translatable="false">"Envoyer message"</string>
    <string name="emploi_title" translatable="false">"Emploi du temps"</string>
    <string name="resultat_title" translatable="false">"Resultats"</string>
    <string name="news_title" translatable="false">"Actualites"</string>
    <string name="event_title" translatable="false">"Evenements"</string>
    <string name="discipline_title" translatable="false">"Discipline"</string>
    <string name="group_title" translatable="false">"Groupes"</string>
    <string name="student_list_title" translatable="false">"Liste des etudiants"</string>

    <string name="send_title">Send</string>
    <string name="to_title">To</string>
    <string name="subject_title">Subject</string>
    <string name="message_title">Message</string>


    <!-- common menu titles -->
    <string name="menu_title" translatable="false">"Acceuil"</string>
    <string name="contact_title" translatable="false">"Contact"</string>
    <string name="deconnexion_title" translatable="false">"Déconnection"</string>
    <string name="profile_title" translatable="false">"Mon profil"</string>

    <string name="name_title" translatable="false">"Prénom Nom"</string>
    <string name="student_type_title" translatable="false">"Etudiant(e)"</string>
    <string name="teacher_type_title" translatable="false">"Enseignant(e)"</string>

    <!-- title activity -->
    <string name="title_activity_accueil" translatable="false">"Accueil"</string>


    <string-array name="liste_des_classes">
        <item>1LFG</item>
        <item>2LFG</item>
        <item>2LGQ</item>
        <item>3LAAA</item>

    </string-array>

    <string-array name="student_list">
        <item>Tayssir Kenzizi</item>
        <item>Aya Amara</item>
        <item>Abir Ben Salem</item>

    </string-array>

</resources>