<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_menu"
                android:icon="@drawable/ic_menu"
                android:title="@string/menu_title" />
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_message"
                android:title="@string/sendmsg_title" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact_title" />
        </menu>
    </item>

    <group android:id="@+id/group2_menu">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_face_black"
            android:title="@string/profile_title" />
        <item
            android:id="@+id/nav_deconnexion"
            android:icon="@drawable/ic_lock"
            android:title="@string/deconnexion_title" />
    </group>


    <!---    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow" />
        </group>
        -->
</menu>